// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled Text Title renders snapshot 1`] = `
<div
  className="css-text-901oao r-fontSize-ubezar r-textAlign-q4m81j"
  dir="auto"
/>
`;

exports[`Styled Text TitleWithProps renders snapshot 1`] = `
<div
  className="css-text-901oao r-color-jwli3a r-fontSize-adyw6z"
  color="#FFFFFF"
  dir="auto"
  size={20}
/>
`;

exports[`Styled Touchable with no props renders snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  tabIndex="0"
/>
`;

exports[`Styled View Square renders snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-height-z80fyv r-width-19wmn03"
/>
`;

exports[`Styled View SquareWithProps renders snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-borderRadius-1f0042m r-height-z80fyv r-width-19wmn03"
/>
`;
